change List.of to Arrays.asList